--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-8259309280:AAFbfAYPPg8nbdyXuoDuWC_lZbABr8I-SGg
+BOT_TOKEN=8259309280:AAFbfAYPPg8nbdyXuoDuWC_lZbABr8I-SGg
 ADMIN_CHAT_ID=7946056190
+TRON_ADDRESS=TPhHDf6YZo7kAG8VxqWKK2TKC9wU2MrowH
