--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BOT_TOKEN=8259309280:AAFbfAYPPg8nbdyXuoDuWC_lZbABr8I-SGg
 ADMIN_CHAT_ID=7946056190
-TRON_ADDRESS=TPhHDf6YZo7kAG8VxqWKK2TKC9wU2MrowH
+PAYMENT_ADDRESS=TPhHDf6YZo7kAG8VxqWKK2TKC9wU2MrowH
+USDT_CONTRACT=TXLAQ63Xg1NAzckPwKHvzw7CSEmLMEqcdj
+PER_100_PRICE=7.21
