--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==20.6
+python-telegram-bot --pre
 python-dotenv==1.0.1
 aiohttp==3.9.5
 requests==2.32.3
-python-telegram-bot[job-queue]
