--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot --pre
+python-telegram-bot==20.6
 python-dotenv==1.0.1
 aiohttp==3.9.5
 requests==2.32.3
+python-telegram-bot[job-queue]
