--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BOT_TOKEN=8259309280:AAHQ-2c_U0KMeGQb0M4TUJnQgtjDQoa7Lm4
 ADMIN_CHAT_ID=7946056190
 PAYMENT_ADDRESS=TPhHDf6YZo7kAG8VxqWKK2TKC9wU2MrowH
 USDT_CONTRACT=TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t
+TRON_API_KEY=79474657-b993-4541-929f-ba28c59420ff
